<resources>
    <string name="app_name">عافية</string>
    <string name="about_afia">اول تطبيق لحجز مواعيد بكل سهولة وبساطة</string>
    <string name="enter">دخول</string>
    <string name="create_account">انشاء حساب</string>
    <string name="login" translatable="false">تسجيل الدخول</string>
    <string name="create_new_account" translatable="false">انشاء حساب جديد ؟</string>
    <string name="sginup" translatable="false">انشاء حساب</string>
    <string name="sginIn" translatable="false">تسجيل</string>
    <string name="notification" translatable="false">التنبيهات</string>
    <string name="offers">العروض</string>
    <string name="my_reservisan">حجوزاتى</string>
    <string name="contact_us" translatable="false">تواصل معنا</string>
    <string name="hospitals" translatable="false">المستشفيات</string>
    <string name="clinic" translatable="false">العيادات</string>
    <string name="user_photo" translatable="false">user photo</string>
    <string name="home">الرئيسية</string>
    <string name="history" translatable="false">العمليات السابقة</string>
    <string name="add" translatable="false">اضافة</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_for_hospital">ابحث عن مستشفى</string>
    <string name="hospital_name">مركز السودان للعيون</string>
    <string name="hospital_address">شارع محمد نجيب</string>
    <string name="user_name">محمد صلاح</string>
    <string name="info_about_account" translatable="false">معلومات عن الحساب</string>
    <string name="phone_key" translatable="false">+249</string>
    <string name="myPhone" translatable="false">995054572</string>
    <string name="gender" translatable="false">النوع</string>
    <string name="male" translatable="false">ذكر</string>
    <string name="female" translatable="false">انثى</string>
    <string name="email" translatable="false">البريد الالكتروني</string>
    <string name="save" translatable="false">حفظ</string>
    <string name="account_data" translatable="false">بيانات الحساب</string>
    <string name="name" translatable="false">الاسم</string>
    <string name="start_now" translatable="false">بدا الان</string>
    <string name="work_days">ايام العمل</string>
    <string name="work_times">اوقات العمل</string>
    <string name="rate" translatable="false">التقيم</string>
    <string name="reserve_now">احجز الأن</string>
    <string name="patient_name">اسم المريض</string>
    <string name="age">العمر</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="next">التالى</string>
    <string name="Specialization">التخصص</string>
    <string name="choose_doctor">أختر طبيب</string>
    <string name="choose_day">اختر يوم</string>
    <string name="reservationDate">تاريخ الحجز</string>
    <string name="reservation_time">زمن الحجز</string>
    <string name="payment_mehod">طريقة الدفع</string>
    <string name="reservation_price">قيمة الحجز</string>
    <string name="add_price">قيمة مضافة</string>
    <string name="final_price">المبلغ الكلى</string>
    <string name="done_reservation">تم الحجز</string>
    <string name="title_activity_hospitals_search">search</string>
    <string name="permission_required_toast">premission required</string>
    <string name="permission_rationale_location">rationale</string>
    <string name="location_permission_denied">permission denied</string>
    <string name="reservation">حجز</string>
    <string name="account">الحساب</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
