<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/offersFragment"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        app:showAsAction="always"
        />

    <item
        android:title="@string/add"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        />

    <item
        android:title="@string/notification"
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification_alert_black"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        />

    <item
        android:id="@+id/userProfilePhoto"
        app:showAsAction="always"
        android:title="@string/user_photo"
        android:icon="@drawable/ic_profile_holder"
        />

</menu>