<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userAccount.accountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            style="@style/AppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textInputEditText5"-->
<!--            style="@style/roundedInput"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginLeft="32dp"-->
<!--            android:layout_marginTop="64dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:layout_marginRight="32dp"-->
<!--            app:hintEnabled="true"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/materialTextView5"-->
<!--            app:layout_constraintStart_toStartOf="@+id/materialTextView5"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/materialTextView5">-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/spinner_background"
            android:hint="@string/name"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
            app:layout_constraintStart_toStartOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/textInputEditText5"
            app:layout_constraintStart_toStartOf="@+id/textInputEditText5"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startNowBtn"
            style="@style/roundedInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/start_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.22000003" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>